--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "postcss": "^8",
     "prettier": "^3.2.1",
+    "sass": "^1.69.7",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
