--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "toastify-js": "^1.12.0",
     "use-immer": "^0.9.0"
   },
   "devDependencies": {
